k8s/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus-${MAMAD_NAMESPACE}.apps.ir-central1.arvancaas.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: grafana-${MAMAD_NAMESPACE}.apps.ir-central1.arvancaas.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
